@@ -91,7 +91,7 @@ public class InformationTableConstraintsTableInfo extends InformationTableInfo {
         super(
             IDENT,
             columnRegistrar(),
-            ImmutableList.of()
+            ImmutableList.of(Columns.CONSTRAINT_CATALOG, Columns.CONSTRAINT_SCHEMA, Columns.CONSTRAINT_NAME)
         );
     }
 }
