@@ -65,6 +65,10 @@ Changes
   directory.
 
 - Changed primary key constraint of the
+  ``information_schema.table_constraints`` table to ``(CONSTRAINT_CATALOG,
+  CONSTRAINT_SCHEMA, CONSTRAINT_NAME)`` for SQL compliance.
+
+- Changed primary key constraint of the
   ``information_schema.referential_constraints`` table to
   ``(CONSTRAINT_CATALOG, CONSTRAINT_SCHEMA, CONSTRAINT_NAME)`` for SQL
   compliance.
